k8s/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-webhook
  namespace: default
  labels:
    name: poc-admicon
spec:
  ports:
    - name: webhook
      port: 443
      targetPort: 443
  selector:
    name: poc-admicon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webhook-deploy
  namespace: default
  labels:
    name: poc-admicon
spec:
  replicas: 1
  selector:
    matchLabels:
      name: poc-admicon
  template:
    metadata:
      name: poc-admicon
      labels:
        name: poc-admicon
    spec:
      containers:
        - name: webhook
          image: xmarlem/poc-admicon:v0.1.5
          imagePullPolicy: Always
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
      volumes:
        - name: webhook-certs
          secret:
            secretName: admission-certs
        - name: logs
          emptyDir: {}
