k8s/manifest.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
 name: simple-webhook.default.cluster.local
 namespace: default
webhooks:
- name: simple-webhook.default.cluster.local
  clientConfig:
    service:
      name: simple-webhook
      namespace: default
      path: "/validate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVakNDQWpxZ0F3SUJBZ0lVYlZTcnZXZVA3VkhOYXZMbWphU2M3ZC9qZWNnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0pURWpNQ0VHQTFVRUF3d2FjMmx0Y0d4bExYZGxZbWh2YjJzdVpHVm1ZWFZzZEM1emRtTXdIaGNOTWpNeApNREUwTWpJek9UVTVXaGNOTXpNeE1ERXhNakl6T1RVNVdqQWxNU013SVFZRFZRUUREQnB6YVcxd2JHVXRkMlZpCmFHOXZheTVrWldaaGRXeDBMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU1rbHdqTjlyNlNtaHd0YldIQitGdWpNR2VOaWNnMWVVOTF3dzJPd1VhMEs2L2ZCSXhVTk9lZWxmSm9acUZSZQpycSs2YjhVVXJCMW [...]
  rules:
  - apiGroups: ["batch"]
    apiVersions: ["v1"]
    resources: ["jobs"]
    operations: ["CREATE"]
    scope: "*"
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  # namespaceSelector:
  #   matchExpressions:
  #   - key: name
  #     operator: In
  #     values: ["default"]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Fail
